snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.9-win__src__extensions__mpdt__mpdtcompose.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.9-win/src/extensions/mpdt/mpdtcompose.cc",
    ),
    start_line: 1,
    end_line: 89,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 8,
            exit_sum: 8,
            total_space_functions: 0,
            exit_min: 8,
            exit_max: 8,
        },
        cognitive: Stats {
            structural: 9,
            structural_sum: 9,
            structural_min: 9,
            structural_max: 9,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 13.0,
            cyclomatic: 13.0,
            n: 1,
            cyclomatic_max: 13.0,
            cyclomatic_min: 13.0,
        },
        halstead: Stats {
            u_operators: 24,
            operators: 206,
            u_operands: 70,
            operands: 154,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 89,
                unit: true,
                sloc_min: 89,
                sloc_max: 89,
            },
            ploc: Ploc {
                lines: {
                    61,
                    49,
                    43,
                    37,
                    31,
                    25,
                    19,
                    80,
                    74,
                    7,
                    68,
                    62,
                    56,
                    44,
                    38,
                    32,
                    87,
                    20,
                    14,
                    75,
                    8,
                    69,
                    63,
                    57,
                    51,
                    45,
                    33,
                    27,
                    88,
                    21,
                    82,
                    15,
                    76,
                    9,
                    64,
                    58,
                    52,
                    40,
                    28,
                    22,
                    83,
                    16,
                    77,
                    71,
                    59,
                    53,
                    47,
                    41,
                    35,
                    29,
                    23,
                    17,
                    78,
                    11,
                    5,
                    66,
                    54,
                    48,
                    42,
                    36,
                    30,
                    24,
                    85,
                    12,
                    73,
                    67,
                },
                ploc_min: 66,
                ploc_max: 66,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 42,
                lloc_min: 42,
                lloc_max: 42,
            },
            space_count: 1,
            blank_min: 19,
            blank_max: 19,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 360.0,
            halstead_vocabulary: 94.0,
            halstead_volume: 2359.6519866039494,
            cyclomatic: 13.0,
            sloc: 89.0,
            comments_percentage: 0.0449438202247191,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
